# BDM_project4

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  TASK_SPLIT.md  docker-compose.yml  project4.md  pyproject.toml  start_project.md
dags/: rico_pipeline.py
migrations/: 002_traceability.sql
rico/: __init__.py  config.py  db.py  fingerprint.py  observability.py  storage.py
rico/prompts/: extract_v1.txt
rico/tasks/: __init__.py  audit.py  embed_image.py  embed_text.py  eval.py  extract.py  ingest.py  load.py  parse.py
tests/: test_fingerprint.py  test_load_sql.py  test_parse.py  test_part_c_sql.py
